# HiPoLy

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  HiPoLy.files  HiPoLy.includes  README  TODO
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/hipoly/: CMakeLists.txt  HiPoLyMainHeader.cpp  HiPoLyMainHeader.hpp
src/lib/hipoly/binreloc/: prefix.c  prefix.h
src/lib/hipoly/color/: SmallColor.cpp  SmallColor.hpp
src/lib/hipoly/compress/: SimpleCompress.cpp  SimpleCompress.hpp
src/lib/hipoly/error/: ErrorSystem.cpp  ErrorSystem.hpp
src/lib/hipoly/event/: EventIdentifier.cpp  EventIdentifier.hpp  EventManager.cpp  EventManager.hpp  EventReceivers.cpp  EventReceivers.hpp  IndexCounter.cpp  IndexCounter.hpp  SummaryEvents.cpp  SummaryEvents.hpp  UUID.cpp  UUID.hpp
src/lib/hipoly/file/: DirectoryEnum.cpp  DirectoryEnum.hpp  DynamicPackage.cpp  DynamicPackage.hpp  FileSystem.cpp  FileSystem.hpp  FortranIO.cpp  FortranIO.hpp  MemBlockFile.cpp  MemBlockFile.hpp  StdIOFile.cpp  StdIOFile.hpp  SystemFS.cpp  SystemFS.hpp  Terminal.cpp  Terminal.hpp
src/lib/hipoly/list/: BaseIterator.cpp  BaseIterator.hpp  BaseList.cpp  BaseList.hpp  Object.cpp  Object.hpp  SimpleIterator.cpp  SimpleIterator.hpp  SimpleList.cpp  SimpleList.hpp  SimpleNode.cpp  SimpleNode.hpp  TemplIterator.cpp  TemplIterator.hpp  TemplList.cpp  TemplList.hpp  TemplNode.cpp  TemplNode.hpp
src/lib/hipoly/option/: SimpleOptions.cpp  SimpleOptions.hpp  SmallGetOpt.cpp  SmallGetOpt.hpp
src/lib/hipoly/stream/: TerminalStr.cpp  TerminalStr.hpp  VerboseStr.cpp  VerboseStr.hpp
src/lib/hipoly/string/: FileName.cpp  FileName.hpp  FormatSpec.cpp  FormatSpec.hpp  Password.cpp  Password.hpp  SmallString.cpp  SmallString.hpp
src/lib/hipoly/thread/: Runnable.cpp  Runnable.hpp  SimpleCond.cpp  SimpleCond.hpp  SimpleCondCommon.cpp  SimpleCondCommon.hpp  SimpleCondPThread.cpp  SimpleCondPThread.hpp  SimpleMutex.cpp  SimpleMutex.hpp  SimpleMutexCommon.cpp  SimpleMutexCommon.hpp  SimpleMutexPThread.cpp  SimpleMutexPThread.hpp  SmartThread.cpp  SmartThread.hpp  SmartThreadCommon.cpp  SmartThreadCommon.hpp  SmartThreadPThread.cpp  SmartThreadPThread.hpp  ThreadPool.cpp  ThreadPool.hpp
src/lib/hipoly/time/: SmallDate.cpp  SmallDate.hpp  SmallTime.cpp  SmallTime.hpp  SmallTimeAndDate.cpp  SmallTimeAndDate.hpp
src/lib/hipoly/xml/: XMLAttribute.cpp  XMLAttribute.hpp  XMLBinData.cpp  XMLBinData.hpp  XMLBinary.cpp  XMLBinary.hpp  XMLComment.cpp  XMLComment.hpp  XMLDeclaration.cpp  XMLDeclaration.hpp  XMLDocument.cpp  XMLDocument.hpp  XMLElement.cpp  XMLElement.hpp  XMLIterator.cpp  XMLIterator.hpp  XMLNode.cpp  XMLNode.hpp  XMLParser.cpp  XMLParser.hpp  XMLPrinter.cpp  XMLPrinter.hpp  XMLText.cpp  XMLText.hpp  XMLUnknown.cpp  XMLUnknown.hpp
src/tests/: CMakeLists.txt
src/tests/hipoly-options/: CMakeLists.txt  hipoly-options  options.cpp  options.hpp  test_options.cpp
src/tests/hipoly-uuidgen/: CMakeLists.txt  hipoly-uuidgen  test_uuid.cpp
src/tests/hipoly-xml/: CMakeLists.txt  hipoly-xml  test.bxml  test_txml.in  test_txml.out  test_xml.cpp
