# ==============================================================================
# HiPoLy CMake File
# ==============================================================================

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(hipoly-options)
ADD_SUBDIRECTORY(hipoly-uuidgen)
ADD_SUBDIRECTORY(hipoly-xml)
