# ==============================================================================
# HiPoLy CMake File
# ==============================================================================

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/test)

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(hipoly-options)
ADD_SUBDIRECTORY(hipoly-uuidgen)
ADD_SUBDIRECTORY(hipoly-xml)
